--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   google_fonts: ^4.0.3
   animated_text_kit: ^4.2.2
   flutter_staggered_grid_view: ^0.6.2
+  story_view: ^0.14.0
+  dashed_circle: ^0.0.2
+  share_plus: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +67,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+  - assets/icons/bookmark.png
+  - assets/icons/chat.png
+  - assets/icons/comment.png
+  - assets/icons/send.png
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
