--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   story_view: ^0.14.0
   dashed_circle: ^0.0.2
   share_plus: ^6.3.1
+  image_picker: ^0.8.6+4
 
 dev_dependencies:
   flutter_test:
